# AdventOfCode2024

./: .gitignore  CMakeLists.txt  README.md
src/: d1a.cpp  d1b.cpp  d2a.cpp  d2b.cpp  d3a.cpp  d3b.cpp
test_cases/: d2a_2.txt  d3b.txt
